service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asgkuber-pnt-service
spec:
  selector:
    app: asgkuber-pnt
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 8080  
      nodeport: 30007
  type: LoadBalancer
